# satisfactory-accounting

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.conf
.github/workflows/: docker-publish.yml  rust.yml
satisfactory-accounting/: Cargo.toml  db-u5-final.json  db-u5-initial.json  db-u6-beta.json  db-u7-initial.json  db-v1.0-dryer.json  db-v1.0-geo.json  db-v1.0-initial.json  db-v1.0-powerline.json  db-v1.0-rocket.json  db-v1.0-semiquantum.json  db-v1.0-wetter.json  db.json
satisfactory-accounting-app/: Cargo.toml  Trunk.toml  index.html
satisfactory-accounting-app/fonts/: fonts.scss
satisfactory-accounting-app/fonts/satisfontory/: Terms of Use.txt
satisfactory-accounting-app/src/: app.rs  app.scss  bugreport.rs  clickedit.rs  colors.scss  compact-mode.scss  context.rs  events.rs  focus.scss  fonts.scss  icon-mixin.scss  locale.rs  main.rs  main.scss  material.rs  node_display.rs  node_display.scss  refeqrc.rs
satisfactory-accounting-app/src/appheader/: AppHeader.scss  mod.rs
satisfactory-accounting-app/src/appheader/menubar/: MenuBar.scss  mod.rs
satisfactory-accounting-app/src/appheader/titlebar/: TitleBar.scss  mod.rs
satisfactory-accounting-app/src/clickedit/: ClickEdit.scss  mod.rs
satisfactory-accounting-app/src/collections/: isharevec.rs  mod.rs
satisfactory-accounting-app/src/inputs/: inputs.scss  mod.rs  whitespace.rs
satisfactory-accounting-app/src/inputs/button/: Button.scss  mod.rs
satisfactory-accounting-app/src/inputs/choose_from_list/: ChooseFromList.scss  mod.rs
satisfactory-accounting-app/src/inputs/clickedit/: ClickEdit.scss  mod.rs  sized-clickedit-mixin.scss
satisfactory-accounting-app/src/inputs/toggle/: checkbox.rs  mod.rs  radio.rs  toggle.scss
satisfactory-accounting-app/src/material/: material-icons.scss  mod.rs
satisfactory-accounting-app/src/modal/: mod.rs  modal.scss
satisfactory-accounting-app/src/node_display/: NodeTreeDisplay.scss  backdrive.rs  balance.rs  building.rs  copies.rs  drag.rs  graph_manipulation.rs  group.rs  icon.rs  mod.rs  node-grid.scss  node_display.scss
satisfactory-accounting-app/src/node_display/balance/: NodeBalance.scss  highlight.rs  highlight.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/: building.scss  building_type.rs  choose_from_list.rs  clock.rs  item.rs  item_rate.rs  multi_purity.rs  name-mixin.scss  purity.rs  recipe.rs  station_consumption.rs
satisfactory-accounting-app/src/node_display/building/building_type/: BuildingTypeDisplay.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/clock/: ClockSpeed.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/item/: ItemDisplay.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/item_or_power/: ItemOrPowerDisplay.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/multi_purity/: MultiPurity.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/purity/: Purity.scss  mod.rs
satisfactory-accounting-app/src/node_display/building/recipe/: RecipeDisplay.scss  mod.rs
satisfactory-accounting-app/src/node_display/clock/: ClockSpeed.scss  mod.rs
satisfactory-accounting-app/src/node_display/copies/: VirtualCopies.scss  mod.rs
satisfactory-accounting-app/src/node_display/group/: GroupName.scss  group_name.rs
satisfactory-accounting-app/src/node_display/icon/: Icon.scss  icon-mixin.scss  mod.rs
satisfactory-accounting-app/src/node_display/inputs/: mod.rs
satisfactory-accounting-app/src/node_display/inputs/clock/: mod.rs
satisfactory-accounting-app/src/notifications/: Notifications.scss  mod.rs
satisfactory-accounting-app/src/overlay_window/: OverlayWindow.scss  controller.rs  mod.rs
satisfactory-accounting-app/src/storagenotice/: StorageNotice.scss  mod.rs
satisfactory-accounting-app/src/user_settings/: UserSettingsWindow.scss  manager.rs  mod.rs  storagemanager.rs  window.rs
satisfactory-accounting-app/src/user_settings/number_format/: formatters.rs  mod.rs  settings_page.rs
satisfactory-accounting-app/src/world/: dbchoice.rs  dbwindow.rs  dbwindow.scss  id.rs  list.rs  manager.rs  manager.scss  meta.rs  mod.rs  savefile.rs  v1storage.rs  world.scss  worldwindow.rs  worldwindow.scss
satisfactory-accounting/src/: accounting.rs  database.rs  fract.rs  lib.rs
satisfactory-accounting/src/accounting/: balance.rs  refs.rs
satisfactory-accounting/src/v1m2/: accounting.rs  balance.rs  mod.rs
satisfactory-accounting/src/v1m3/: mod.rs
satisfactory-accounting/src/v1m3/building/: clock.rs  mod.rs
satisfactory-db/: Cargo.toml  data.json
satisfactory-db/src/: lib.rs  main.rs  rawdata.rs
