[package]
name = "satisfactory-accounting-app"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.5"
console_log = "0.2"
fuzzy-matcher = "0.3"
# Not direclty used but `now` doesn't link properly if we don't set the wasm-bindgen
# feature, and that's needed when actually using Serde or Serde-Json, and breaks the whole
# app.
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
satisfactory-accounting = { path = "../satisfactory-accounting", features = ["wasm-bindgen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
uuid = { version = "0.8", features = ["serde", "wasm-bindgen"] }
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "DataTransfer",
    "DomRect",
    "DomTokenList",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
]
