[package]
name = "satisfactory-accounting-app"
version = "1.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
console_log = "1"
fuzzy-matcher = "0.3"
gloo = { version = "0.11", features = ["futures"] }
icu_collator = "1.5"
icu_provider = "1.5"
implicit-clone = "0.4"
# Not direclty used but `now` doesn't link properly if we don't set the wasm-bindgen
# feature, and that's needed when actually using Serde or Serde-Json, and breaks the whole
# app.
# instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
satisfactory-accounting = { path = "../satisfactory-accounting", features = ["wasm-bindgen"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wasm-bindgen = "^0.2.95"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["serde", "v4", "js"] }
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "DataTransfer",
    "DomRect",
    "DomTokenList",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FocusEvent",
    "HtmlAnchorElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Navigator",
    "StorageManager",
]
