[package]
name = "satisfactory-accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm-bindgen = ["uuid/wasm-bindgen"]

[dependencies]
internment = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
