[package]
name = "satisfactory-accounting"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm-bindgen = ["uuid/js"]

[dependencies]
internment = "0.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
