[package]
name = "satisfactory-accounting"
version = "1.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm-bindgen = ["uuid/js"]

[dependencies]
implicit-clone = { version = "0.4", features = [ "serde" ] }
internment = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
