[package]
name = "satisfactory-db"
version = "1.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
satisfactory-accounting = { path = "../satisfactory-accounting" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
